# quantum-price-inference

./: .gitignore  AGENTS.md  CLAUDE.md  EXPLAINER.md  LICENSE  Makefile  Quantum_Workshop_Facilitator_Script.md  README.md  pyproject.toml
api/: __init__.py  config.py  limiter.py  main.py  middleware.py  schemas.py
api/routes/: __init__.py  classical.py  quantum.py
deploy/: .env.example  Dockerfile  docker-compose.yml  prometheus-alerts.yml  prometheus.yml
deploy/grafana/provisioning/dashboards/: dashboards.yml  qpi-api.json
deploy/grafana/provisioning/datasources/: prometheus.yml
docs/: EXPLAINER.md  IMPROVEMENT_PLAN.md  Quantum_Workshop_Facilitator_Script.md  STORYBOARD.md
docs/ref/: OJ_Pricing_Quantum_vs_Classical_Demo.md  OJ_Pricing_Quantum_vs_Classical_Demo.pptx  OJ_Pricing_Quantum_vs_Classical_Demo.pptx:sec.endpointdlp
notebook/: 00_calculating_orangejuice_price.ipynb  00_calculating_orangejuice_price_app.ipynb  00_calculating_orangejuice_price_app.py  00_calculating_orangejuice_price_app.url  01_price_estimation_techniques.ipynb  01_price_estimation_techniques.url  01_price_estimation_techniques_app.py  quantum_price_inference.ipynb
quantum_price_inference/: __init__.py  _log.py  classical.py  composer.py  payoff.py  quantum.py  uncertainty.py
tests/: conftest.py  test_api.py  test_classical.py  test_composer.py  test_payoff.py  test_quantum.py  test_uncertainty.py
